updated teachme ... fixed homepage carousel images and menu page image sizing and ratio, now works on mobile view

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -128,6 +128,8 @@ a.navbar-brand img {
 
 .carousel-item {
   position: relative;
+  max-width: 100%;
+  max-height: 1000px;
 }
 
 .carousel-caption {
@@ -150,8 +152,8 @@ a.navbar-brand img {
 
 .carousel-item img {
   margin: 0 auto;
-  max-width: 1800px;
-  max-height: 900px;
+  max-width: 100%;
+  height: 100%;
 }
 
 .signupnow {
@@ -217,12 +219,14 @@ a.navbar-brand img {
 .card {
   background: rgba(255, 255, 255, 0);
   border: none;
+  max-width: 100%;
+  max-height: 1000px;
 }
 
 .card-img {
   margin: 0 auto;
-  max-width: 1500px;
-  height: 800px;
+  max-width: 100%;
+  height: 100%;
   position: relative;
 }
 
